# forta-bot-sdk

./: .gitignore  README.md  forta-agent-0.0.40.tgz  jest.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
.github/workflows/: cli-unit-test.yml  jest.yml  on-pull-request.yml  python-bot-build.yml  python-build.yml  python-sdk-unit-test.yml  typescript-bot-build.yml  typescript-build.yml  typescript-sdk-unit-test.yml
cli/: di.container.ts  global.d.ts  index.ts
cli/contracts/: AgentRegistry.json  agent.registry.abi.json  agent.registry.ts  fort.token.ts  staking.contract.abi.json  staking.contract.ts  utils.ts
cli/proto/: agent.proto  grpc.handle.block.ts  grpc.handle.transaction.ts  types.ts
cli/utils/: add.to.ipfs.spec.ts  add.to.ipfs.ts  append.to.file.ts  create.keyfile.ts  create.new.keyfile.ts  decrypt.keyfile.ts  get.agent.handlers.spec.ts  get.agent.logs.ts  (+45 more)
go-sdk/: block.go  finding.go  main.go
python-sdk/: README.md  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg
python-sdk/src/forta_agent/: __init__.py  alert.py  alert_event.py  alert_test.py  alerts_api.py  block.py  block_event.py  bloom_filter.py  bloom_filter_test.py  event_type.py  finding.py  forta_graphql.py  jwt.py  jwt_test.py  label.py  labels_api.py  labels_api_test.py  network.py  receipt.py  trace.py  transaction.py  transaction_event.py  utils.py  utils_test.py
python-sdk/src/forta_agent/graphql/: forta.py
sdk/: alert.event.spec.ts  alert.event.ts  alert.spec.ts  alert.ts  alerts.api.ts  block.event.ts  block.ts  bloom.filter.spec.ts  bloom.filter.ts  event.type.ts  finding.spec.ts  finding.ts  forta.config.ts  handlers.ts  index.ts  initialize.response.ts  jwt.spec.ts  jwt.ts  label.ts  labels.api.spec.ts  labels.api.ts  network.ts  receipt.ts  trace.ts  transaction.event.ts  transaction.ts  utils.spec.ts  utils.ts
starter-project/: .dockerignore  LICENSE.md
(+80 files in other folders)
