[metadata]
name = forta_agent
version = 0.0.4
description = Forta Agent Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    jsonc_parser
    sha3

[options.packages.find]
where = src