[metadata]
name = forta_agent
version = 0.1.21
description = Forta Agent Python SDK
url = https://forta.org/
project_urls = 
    Source = https://github.com/forta-network/forta-agent-sdk
    Documentation =  https://docs.forta.network/
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    jsonc_parser
    web3>=6.0.0
    hexbytes
    mmh3==3.0.0

[options.packages.find]
where = src
